# json-parser

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  THIRD-PARTY-LICENSES.md  benchmark_results.json  json_grammar.md  pyproject.toml
.github/workflows/: python-tests.yml
jsonparser/: __init__.py  __main__.py  errors.py  lexer.py  parser.py  stack.py  tokens.py
tests/: conftest.py  test_comments.py  test_lexer.py  test_lexer_performance.py  test_parser.py  test_performance.py  test_suite_runner.py
tests/json_test_suite/: README.md
tests/scripts/: benchmark_dimensions.py  visualize_results.py
