[project]
name = "jsonparser"
version = "0.0.1"
description = "A custom JSON parser written in Python for educational purposes."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
  { name = "Jason Gregg (e66head)", email = "e66head-github@yahoo.com" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
