[project]
name = "jsonparser"
dynamic = ["version"]
description = "A custom JSON parser written in Python for educational purposes."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
  { name = "Jason Gregg (e66head)", email = "e66head-github@yahoo.com" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.dynamic]
version = {attr = "jsonparser.__version__"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
